--- a/estilo/style.css
+++ b/estilo/style.css
@@ -37,7 +37,7 @@ a.externo::after {
 
 header {
     background-image: linear-gradient(var(--cor3), var(--cor5));
-    height: 150px;
+    height: 200px;
     text-align: center;
     padding-top: 40px;
 }
@@ -56,9 +56,8 @@ header > p {
     font-size: 1.2em;
     color: white;
     max-width: 600px;
-    padding: 0px 10px;
-    margin: 0 auto;
-    margin-bottom: 20px;
+    padding: 0 10px 30px 10px;
+    margin: auto;
     text-shadow: 3px 4px 0px rgba(0, 0, 0, 0.438);;
 
 }
